# rpg-npc-generator

./: .codenvy.json  .dockerignore  .gitignore  .gitmodules  .travis.yml  DIAGRAMS.MD  FEATURE-REQUEST_LIST.md  LICENSE  README.md  RELEASE.md  TODO.md  build.gradle  build.gradle.kts  gradle.properties  pom.xml  settings.gradle.kts
.github/workflows/: android-test.main.kts  android-test.yaml  android-test.yml  detekt.main.kts  detekt.yaml  instrumented-tests.main.kts  instrumented-tests.yaml  release-drafter.main.kts  release-drafter.yaml  release.main.kts  release.yaml  tests.main.kts  tests.yaml
.gitsecret/keys/: pubring.kbx  trustdb.gpg
.gitsecret/paths/: mapping.cfg
app/: build.gradle  build.gradle.kts  bump_version.sh  detekt-config.yml  google-services.json  keystore.properties.secret  keystore.secret  proguard-rules.pro  version.properties
app/objectbox-models/: default.json  default.json.bak
app/src/github/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  sd_jni.cpp
config/detekt/: detekt.yml
docs/ads/: README.md  generate.py
docs/producthunt/: README.md  generate.py
fastlane/: .gitignore  Appfile  Fastfile  google-play.json.secret
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
server/glitchtip/: .env.example  .gitignore  README.md  deploy.sh  docker-compose.yml
server/portrait-renderer/: .gitignore  Dockerfile  Dockerfile.queue  README.md  auth.txt.example  deploy.sh  docker-compose.yml  queue_app.py
src/main/: AndroidManifest.xml
src/main/res/values/: strings.xml
(+347 files in other folders)
